scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 * {
   font-family: "Poppins", sans-serif;
+  scrollbar-gutter: stable;
 }
 
 ::-webkit-scrollbar {
